--- a/izooto/src/main/res/values/strings.xml
+++ b/izooto/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="something_wrong_fcm_sender_id">\"Some thing is wrong with FCM sender id.\"</string>
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
+    <string name="share">Share</string>
 </resources>
