--- a/izooto/src/main/res/values/strings.xml
+++ b/izooto/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="iz_brand_name">iZooto</string>
     <string name="iz_watch_this_space_to_get_latest_updates">Watch this space to get latest updates.</string>
     <string name="iz_title_name">Title</string>
+    <string name="action_settings">Settings</string>
+    <string name="timer">0:00</string>
+    <string name="watch_this_space_to_get_latest_updates">Watch this space to get latest updates.</string>
+    <string name="iz_cta_dismissed">Close</string>
+    <string name="todo">TODO</string>
 </resources>
