--- a/izooto/src/main/res/values-ar/strings.xml
+++ b/izooto/src/main/res/values-ar/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="iz_share">يشارك</string>
     <string name="iz_cta_dismissed">يغلق</string>
+    <string name="iz_nz_bottom_msg">You\'re all caught up!</string>
+
 </resources>
