--- a/izooto/src/main/res/values/strings.xml
+++ b/izooto/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>\
-    <string name="something_wrong_fcm_sender_id" translatable="false">\"Some thing is wrong with FCM sender id.\"</string>
-    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
+    <string name="something_wrong_with_fcm_sender_id" translatable="false">\"Some thing is wrong with FCM sender id.\"</string>    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
       <string name="channel_id_without_sound" translatable="false">channel_without_sound</string>
     <string name="default_channel_id" translatable="false">system default channel</string>
     <string name="iz_share">Share</string>
