--- a/izooto/src/main/res/values/strings.xml
+++ b/izooto/src/main/res/values/strings.xml
@@ -26,5 +26,7 @@
     <string name="footer_text" translatable="false">You\'re all caught up!</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="margin_space" translatable="false">|</string>
+    <string name="out_brain" translatable="false"> </string>
 
 </resources>
